# filemanagement_file_api

./: 1.diff.txt  AGENTS.md  OAT.xml  README.md  README_zh.md  bundle.json  diff.txt  file_api.gni
interfaces/kits/c/compress/: BUILD.gn
interfaces/kits/c/compress/frameworks/: archive_macros.h  errorcode.h
interfaces/kits/c/environment/: BUILD.gn  environment.c  environment.h
interfaces/kits/c/fileio/: BUILD.gn  fileio.c  fileio.h  libfileio.ndk.json
interfaces/kits/c/swapfs/: BUILD.gn  swapfs.c  swapfs.h  swapfs_errcode.h
interfaces/kits/cj/: BUILD.gn  libcj_file_api.map
interfaces/kits/cj/src/: cj_file_utils.h  copy.cpp  copy.h  copy_dir.cpp  copy_dir.h  copy_file.cpp  copy_file.h  fdatasync.cpp  fdatasync.h  file_ffi.cpp  file_ffi.h  file_fs_ffi.cpp  file_fs_ffi.h  file_fs_impl.cpp  file_fs_impl.h  file_fs_mock.cpp  file_impl.cpp  file_impl.h  fsync.cpp  fsync.h  list_file.cpp  list_file.h  lseek.cpp  lseek.h  macro.h  mkdtemp.cpp  mkdtemp.h  move_file.cpp  move_file.h  randomAccessFile_impl.cpp  randomAccessFile_impl.h  readerIterator_impl.cpp  readerIterator_impl.h  stat_ffi.cpp  stat_ffi.h  stat_impl.cpp  stat_impl.h  statvfs_ffi.cpp  statvfs_ffi.h  statvfs_impl.cpp  (+20 more)
interfaces/kits/js/: BUILD.gn
interfaces/kits/js/napi/: @ohos.document.d.ts  @ohos.environment.d.ts  @ohos.fileio.d.ts  @ohos.securityLabel.d.ts  @ohos.statfs.d.ts  @system.file.d.ts
interfaces/kits/js/src/common/: dfs_event_dfx.h  file_api_debug.cpp  file_api_debug.h  file_filter.h  file_fs_metrics.h  file_fs_trace.cpp  file_fs_trace.h  fs_filefiter.h  log.h  uni_error.cpp  uni_error.h
interfaces/kits/js/src/mod_document/: document_n_exporter.cpp  document_n_exporter.h  document_napi.cpp
interfaces/kits/js/src/mod_environment/: environment_core.cpp  environment_core.h  environment_n_exporter.cpp  environment_n_exporter.h  environment_napi.cpp
interfaces/kits/js/src/mod_file/: common_func.cpp  common_func.h  module.cpp
interfaces/kits/js/src/mod_fileio/: common_func.cpp  common_func.h  module.cpp  module_v9.cpp  prop_n_exporter_v9.cpp
interfaces/kits/js/src/mod_fs/: common_func.cpp  common_func.h  fdtag_func.cpp  fdtag_func.h  fs_utils.cpp  fs_utils.h  module.cpp  module.cpp.rej
interfaces/kits/js/src/mod_hash/: create_streamhash.cpp  create_streamhash.h  hash.cpp  hash.h  hash_core.cpp  hash_core.h  module.cpp
interfaces/kits/js/src/mod_securitylabel/: security_label.h  securitylabel_core.cpp  securitylabel_core.h  securitylabel_n_exporter.cpp  securitylabel_n_exporter.h  securitylabel_napi.cpp
interfaces/kits/js/src/mod_statfs/: statfs_n_exporter.cpp  statfs_n_exporter.h  statfs_napi.cpp  statfs_napi.h
interfaces/kits/js/src/mod_statvfs/: statvfs_core.cpp  statvfs_core.h  statvfs_n_exporter.cpp  statvfs_n_exporter.h  statvfs_napi.cpp
interfaces/kits/native/: BUILD.gn
interfaces/kits/native/environment/: environment_native.cpp  environment_native.h
interfaces/kits/native/fileio/: fileio_native.cpp  fileio_native.h
interfaces/kits/native/remote_uri/: remote_uri.cpp  remote_uri.h
interfaces/kits/native/swapfs/: BUILD.gn
interfaces/kits/native/swapfs/include/: swapfs_c_api.h  (+7 more)
interfaces/kits/native/task_signal/: task_signal.cpp  task_signal.h  task_signal_listener.h
interfaces/kits/ts/streamhash/: BUILD.gn  native_module_streamhash.cpp
interfaces/kits/ts/streamrw/: BUILD.gn  build_ts_js.py  native_module_streamrw.cpp  tsconfig.json
interfaces/test/fuzztest/: BUILD.gn
interfaces/test/fuzztest/fuzz_common/: fileapi_fuzzer_helper.h
interfaces/test/fuzztest/hyperaio_fuzzer/: BUILD.gn  hyperaio_fuzzer.cpp  hyperaio_fuzzer.h
interfaces/test/unittest/: AGENTS.md  BUILD.gn
interfaces/test/unittest/class_atomicfile/: BUILD.gn  atomicfile_mock_test.cpp
interfaces/test/unittest/class_file/: BUILD.gn  rust_test.cpp
interfaces/test/unittest/common_mock/: accesstoken_kit_mock.cpp  accesstoken_kit_mock.h  c_mock.cpp  c_mock.h  dfs_mock.cpp  dfs_mock.h  eventfd_mock.cpp  eventfd_mock.h  fdsan_mock.cpp  fdsan_mock.h  inotify_mock.cpp  inotify_mock.h  mmap_mock.cpp  mmap_mock.h  os_account_manager_mock.h  parameter_mock.cpp  parameter_mock.h  poll_mock.cpp  poll_mock.h  stdio_mock.cpp  stdio_mock.h  sys_file_mock.cpp  sys_file_mock.h  sys_xattr_mock.cpp  sys_xattr_mock.h  system_mock.cpp  system_mock.h  tokenid_kit_mock.cpp  tokenid_kit_mock.h  unistd_mock.cpp  unistd_mock.h  uv_err_mock.cpp  uv_err_mock.h  uv_fs_mock.cpp  uv_fs_mock.h  uv_mock.cpp  uv_mock.h
interfaces/test/unittest/common_utils/: ut_file_utils.cpp  ut_file_utils.h
interfaces/test/unittest/compress/: BUILD.gn  archive_reader_open_source_test.cpp  archive_reader_test.cpp  streamwrite_ut.cpp  zip_writer_open_source_test.cpp  zip_writer_test.cpp
interfaces/test/unittest/file_watcher/: BUILD.gn  file_watcher_test.cpp
interfaces/test/unittest/filemgmt_libn_test/: BUILD.gn
interfaces/test/unittest/hyperaio/: BUILD.gn  hyperaio_test.cpp
interfaces/test/unittest/js/: BUILD.gn
interfaces/test/unittest/movedir/: BUILD.gn  movedir_mock_test.cpp
interfaces/test/unittest/napi_js/: BUILD.gn  fdatasync_mock_test.cpp  prop_n_exporter_mock_test.cpp
interfaces/test/unittest/napi_test/: BUILD.gn  FsCopyTest.js  config.json  openharmony_sx.p7b
interfaces/test/unittest/remote_uri/: BUILD.gn  remote_uri_test.cpp
interfaces/test/unittest/resource/: ohos_test.xml  rust_test.txt
interfaces/test/unittest/swapfs/: BUILD.gn  swapfs_err_mapper_test.cpp  swapfs_io_engine_test.cpp  swapfs_manager_test.cpp  swapfs_proxy_control_test.cpp  swapfs_session_cleaner_test.cpp  swapfs_storage_manager_mock.h  swapfs_syscall_mock.cpp  swapfs_syscall_mock.h  swapfs_test.cpp
interfaces/test/unittest/task_signal/: BUILD.gn  task_signal_test.cpp
utils/filemgmt_libn/: BUILD.gn
utils/filemgmt_libn/include/: filemgmt_libn.h  n_class.h  n_error.h  n_exporter.h  n_val.h
utils/filemgmt_libn/include/n_async/: n_async_context.h  n_async_work_callback.h  n_ref.h
utils/filemgmt_libn/src/: n_class.cpp  n_error.cpp  n_val.cpp
utils/filemgmt_libn/src/n_async/: n_async_work_callback.cpp  n_async_work_promise.cpp  n_ref.cpp
(+751 files in other folders)
